objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Interviewer_Comments_Feedback__c</fullName>
        <label>Interviewer Comments/Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interviewer_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer name</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Review</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Review  No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>